[package]
name = "pass-age"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Malyn <bim9262@gmail.com"]
description = "Extension for pass to find passwords that haven't been updated in a while"
license = "MIT OR Apache-2.0"
keywords = ["pass", "passwordstore"]
categories = [
    "authentication",
    "command-line-utilities",
]
repository = "https://github.com/bim9262/pass-age.git"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.23"
chrono-humanize = "0.2.2"
clap = { version = "4.1.4", features = ["derive"]}
clio = { version = "0.3.3", features = ["clap-parse"]}
glob = "0.3.1"
humantime = "2.1.0"


[build-dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"]}
clap_complete = "4.1.1"
clap_mangen = "0.2.7"
clio = { version = "0.3.3", features = ["clap-parse"]}
humantime = "2.1.0"
